test/fail/interpolation/interp_multiline.lly
#[
SyntaxError: Newline in interpolated section.
    from interp_multiline.lly:6
]#

var v = $"^(
"
